// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rendering works 1`] = `
<span
  class="bangle-dino "
>
  <img
    alt="brontosaurus"
    src="test-file-stub"
    style="display: inline; height: 24px; vertical-align: bottom; border: 1px solid #0ae; border-radius: 4px; background: rgb(221, 246, 255);"
  />
</span>
`;

exports[`Rendering works with different type of dino 1`] = `
<span
  class="bangle-dino "
>
  <img
    alt="stegosaurus"
    src="test-file-stub"
    style="display: inline; height: 24px; vertical-align: bottom; border: 1px solid #0ae; border-radius: 4px; background: rgb(221, 246, 255);"
  />
</span>
`;
